form overflow issue fixed

--- a/src/components/Dropdown/TransferForm/transferform.css
+++ b/src/components/Dropdown/TransferForm/transferform.css
@@ -7,10 +7,10 @@
 }
 
 .online-booking{
-    height: 105vh;
-    background: rgb(2,0,36);
+    height: 89vh;
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(98,204,35,0.5158438375350141) 35%, rgba(0,212,255,1) 100%);
     position: relative;
+    overflow: auto;
 }
 
 .online-booking-container{
@@ -25,13 +25,6 @@
 }
 .online-booking-container h1{
     text-align: center;
-}
-
-.border-true{
-    border-left: 1px solid black;
-}
-.border-false{
-    border-left: none;
 }
 
 input[type=email], input[type=password], input[type=text] {
@@ -118,12 +111,6 @@ td{
         left: 50%;
         transform: translateX(-50%);
         box-shadow: none;
-    }
-    .transfer-form-container{
-        flex-direction: column;
-    }
-    .border-true{
-        border-left: none;
     }
 }
 
